style(triggers): fix message alignment

--- a/src/features/WorkflowManager/components/ChangeLog/LogCard/styles.scss
+++ b/src/features/WorkflowManager/components/ChangeLog/LogCard/styles.scss
@@ -20,13 +20,14 @@
 
 .b-workflow-log__message {
   font-size: 1.25rem;
+  line-height: 1.5rem;
+  text-align: center;
   flex: 1 1 auto;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 .c-workflow-log__data {
-  flex: 0 0 20rem;
   display: flex;
   justify-content: space-between;
 }
@@ -40,4 +41,7 @@
 }
 .b-workflow-log__user {
   width: 15rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
